fix: change ticket text align

--- a/src/components/TicketCard/TicketCard.module.scss
+++ b/src/components/TicketCard/TicketCard.module.scss
@@ -6,6 +6,7 @@
   column-gap: $gapX;
   max-height: fit-content;
   border: none;
+  text-align: left;
   cursor: pointer;
   & > * {
     pointer-events: none;
